<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cthulhator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_portraits">Portraits</string>
    <string name="mythos">Mythos</string>
    <string name="placeholder_perc_val">99</string>
    <string name="sanity">Sanity</string>
    <string name="idea">Idea</string>
    <string name="knowledge">Knowledge</string>
    <string name="edu">EDU</string>
    <string name="_int">INT</string>
    <string name="dex">DEX</string>
    <string name="str">STR</string>
    <string name="siz">SIZ</string>
    <string name="activity_test">Test</string>
    <string name="hit_points">Hit Points</string>
    <string name="hit_points_tag">HitPoints</string>
    <string name="placholder_value">14</string>
    <string name="know">Know</string>
    <string name="activity_character">Character</string>
    <string name="any">Any</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="year">Year</string>
    <string name="hint_name">Full Name</string>
    <string name="activity_random_user">Random User</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="men">Men</string>
    <string name="woman">Woman</string>
    <string name="none">None</string>
    <string name="hair">Hair</string>
    <string name="speech">Speech</string>
    <string name="personality">Personality</string>
    <string name="characteristic">Characteristic</string>
    <string name="facial">Facial Feature</string>
    <string name="gaslight">Gaslight</string>
    <string name="apply">Apply</string>
    <string name="jazzage">Jazz Age</string>
    <string name="jazzage_years">1920-1940</string>
    <string name="add_character_info">Would you introduce me?</string>
    <string name="add_character_statistics">How well will things go?</string>
    <string name="add_character_history">What is your story?</string>
    <string name="add_character_equipment">Equipment</string>
    <string name="points_available">Points Available</string>
    <string name="points_available_format">Points Available %1$s</string>
    <string name="strength">Strength</string>
    <string name="size">Size</string>
    <string name="damage_bonus">Damage Bonus</string>
    <string name="constitution">Constitution</string>
    <string name="power">Power</string>
    <string name="luck">Luck</string>
    <string name="magic_points">Magic Points</string>
    <string name="sanity_points">Sanity Points</string>
    <string name="dexterity">Dexterity</string>
    <string name="dodge">Dodge</string>
    <string name="intelligence">Intelligence</string>
    <string name="education">Education</string>
    <string name="age">Age</string>
    <string name="affects">Affects</string>
    <string name="career_skill_points">Career Skill Points</string>
    <string name="career">CAREER</string>
    <string name="hobby">HOBBY</string>
    <string name="hobby_skill_points">Hobby Skill Points</string>
    <string name="con">CON</string>
    <string name="app">APP</string>
    <string name="appearance">Appearance</string>
    <string name="pow">POW</string>
    <string name="san">SAN</string>
    <string name="creation_workflow">Workflow</string>
    <string name="placeholder_top_stats">Intelligence, Education, Dexterity, Cthulhu Mythos, Library, Use Cherry Popper</string>
    <string name="placeholder_short_info">Location</string>
    <string name="delete">DELETE</string>
    <string name="history">History</string>
    <string name="placeholder_proverb">Characters</string>
    <string name="assign_skills">Skillset</string>
    <string name="assign_skills_format">Skillset (%1$s)</string>
    <string name="choose_skillset">Skills</string>
    <string name="configuration">Configuration</string>
    <string name="touch_to_cache">Start Caching Random Users</string>
    <string name="reroll">Reroll</string>
    <string name="statistics">Statistics</string>
    <string name="placeholder_suggested_proffession">Gumshoe</string>
    <string name="placeholder_event">The Fuller Memorandum</string>
    <string name="placeholder_event_short">“I wish I was still an atheist. Believing I was born into a harsh, uncaring cosmos – in which my existence was a random roll of the dice and I was destined to die and rot and then be gone forever – was infinitely more comforting than the truth. Because the truth is that my God is coming back. When he arrives I’ll be waiting for him with a shotgun. And I’m keeping the last shell for myself.”</string>
    <string name="placeholder_date">October 18, 1964</string>
    <string name="event_hint">Subject</string>
    <string name="event_title_hint">Title</string>
    <string name="add_history_event">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="born">Born</string>
    <string name="skills">Skills</string>
    <string name="hint_assign_statistics">Assign statistics and skills</string>
    <string name="hint_assign_name">Descirbe your character</string>
    <string name="hint_equipment">What\'s in the bag, man.</string>
    <string name="hint_history">Tell character\'s story</string>
    <string name="done">Done</string>
    <string name="unknown_name">No name</string>
    <string name="unknown_statistics">No statistics</string>
    <string name="unknonw_location">Unknown location</string>
    <string name="CthulhuMythos">CthulhuMythos</string>
    <string name="show_skills">Show Skills</string>

</resources>
