<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_test"
        android:icon="@drawable/ic_action_test"
        android:orderInCategory="1"
        android:title="@string/activity_test"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_character"
        android:icon="@drawable/ic_action_test"
        android:orderInCategory="1"
        android:title="@string/activity_character"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_portriats"
        android:icon="@drawable/ic_action_portraits"
        android:orderInCategory="2"
        android:title="@string/activity_portraits"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView"/>

</menu>
