<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    style="@style/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    tools:context=".AppClass">

    <com.bustiblelemons.views.StatisticView
        app:valueSize="@dimen/font_24"
        app:titleSize="@dimen/font_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="@string/hit_points"
        app:showModifiers="true"
        app:statTitle="@string/hit_points"
        app:statValue="@string/placholder_value"
        app:valueBelow="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/full_bleed_divider"
        android:background="@drawable/full_bleed_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="@string/mythos">

        <com.bustiblelemons.views.StatisticView
            app:valueSize="@dimen/font_24"
            app:titleSize="@dimen/font_16"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            app:statTitle="@string/str"
            app:statValue="@string/placeholder_perc_val"/>

        <com.bustiblelemons.views.StatisticView
            app:valueSize="@dimen/font_24"
            app:titleSize="@dimen/font_16"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            app:statTitle="@string/siz"
            app:statValue="@string/placeholder_perc_val"/>

    </LinearLayout>

    <View
        style="@style/inset_divider"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="@string/mythos">

        <com.bustiblelemons.views.StatisticView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            app:statTitle="@string/dex"
            app:statValue="@string/placeholder_perc_val"
            app:valueBelow="false"
            app:valueSize="@dimen/font_24"/>

        <com.bustiblelemons.views.StatisticView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            app:statTitle="@string/kon"
            app:statValue="@string/placeholder_perc_val"
            app:titleSize="@dimen/font_16"
            app:valueBelow="false"
            app:valueSize="@dimen/font_24"/>
    </LinearLayout>

</LinearLayout>