<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_background">

    <LinearLayout
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_16">

        <com.bustiblelemons.views.SkillView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/pow"
            app:showModifiers="false"
            app:statTitle="@string/power"
            app:statValue="@integer/placeholder_perc_val"
            app:titleSize="@dimen/font_16"
            app:valueSize="@dimen/font_18"/>

        <View
            style="@style/inset_divider"
            android:layout_width="match_parent"/>

        <com.bustiblelemons.views.SkillView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/san"
            app:showModifiers="false"
            app:statTitle="@string/sanity"
            app:statValue="@integer/placeholder_perc_val"
            app:titleSize="@dimen/font_16"
            app:valueSize="@dimen/font_18"/>

    </LinearLayout>
</FrameLayout>