<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    style="@style/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_16">

    <com.bustiblelemons.views.SkillView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:statTitle="@string/mythos"
        app:valueSize="@dimen/font_16"
        app:titleSize="@dimen/font_16"
        app:showModifiers="true"
        app:statValue="@string/placeholder_perc_val"/>

    <View
        style="@style/inset_divider"
        android:layout_width="match_parent"/>

    <com.bustiblelemons.views.SkillView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:statTitle="@string/sanity"
        app:statValue="@string/placeholder_perc_val"/>


</LinearLayout>