<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_background">

    <RelativeLayout
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16">

        <com.bustiblelemons.views.SkillView
            android:id="@id/app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/app"
            app:percentile="true"
            app:showModifiers="true"
            app:statTitle="@string/appearance"
            app:statValue="@integer/placeholder_perc_val"
            app:titleSize="@dimen/font_16"
            app:valueSize="@dimen/font_18"/>

        <View
            android:id="@id/___divider_3"
            android:layout_below="@id/app"
            style="@style/full_bleed_divider"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_below="@id/___divider_3"
            android:textColor="@color/black_54"
            android:id="@id/skills_list"
            android:textAllCaps="true"
            android:gravity="center"
            android:padding="@dimen/padding_12"
            android:text="@string/show_skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</FrameLayout>