<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    style="@style/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    tools:context=".AppClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="@string/mythos">

        <com.bustiblelemons.views.StatisticView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            app:statTitle="@string/_int"
            app:statValue="@integer/placeholder_perc_val"
            app:titleSize="@dimen/font_16"
            app:valueSize="@dimen/font_24"/>

        <com.bustiblelemons.views.StatisticView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            app:percentile="true"
            app:statTitle="@string/idea"
            app:statValue="@integer/placeholder_perc_val"
            app:titleSize="@dimen/font_16"
            app:valueSize="@dimen/font_24"/>

    </LinearLayout>


    <View
        style="@style/inset_divider"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="@string/mythos">

        <com.bustiblelemons.views.StatisticView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            app:statTitle="@string/edu"
            app:statValue="@integer/placeholder_perc_val"
            app:titleSize="@dimen/font_16"
            app:valueBelow="true"
            app:valueSize="@dimen/font_24"/>

        <com.bustiblelemons.views.StatisticView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            app:percentile="true"
            app:statTitle="@string/know"
            app:statValue="@integer/placeholder_perc_val"
            app:titleSize="@dimen/font_16"
            app:valueBelow="true"
            app:valueSize="@dimen/font_24"
            />

    </LinearLayout>

    <View
        style="@style/full_bleed_divider"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.bustiblelemons.views.SkillView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:percentile="true"
            app:showModifiers="true"
            app:statTitle="@string/placeholder_title"
            app:statValue="@integer/placeholder_perc_val"
            app:titleSize="@dimen/font_16"
            app:valueLeft="false"
            app:valueSize="@dimen/font_18"/>
    </LinearLayout>

</LinearLayout>