<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/chracter_card">

    <com.bustiblelemons.views.LoadingImage
        android:id="@android:id/icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/extra_info" />

    <RelativeLayout
        android:id="@id/main_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/extra_info"
        android:background="@drawable/character_card_name_scream">

        <TextView
            android:id="@id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingBottom="@dimen/padding_8"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:paddingTop="@dimen/padding_16"
            android:textColor="@color/white_87"
            android:textSize="@dimen/font_22"
            android:textStyle="bold"
            tools:text="@string/placeholder_name" />

        <TextView
            android:id="@id/short_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:ellipsize="end"
            android:maxLength="@integer/twit_length"
            android:paddingBottom="@dimen/padding_16"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:textColor="@color/white_87"
            android:textSize="@dimen/font_14"
            tools:text="@string/placeholder_short_info" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@id/extra_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@id/extra_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/menu"
            android:ellipsize="end"
            android:maxLength="@integer/twit_length"
            android:paddingBottom="@dimen/padding_16"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:paddingTop="@dimen/padding_16"
            android:textColor="@color/black_54"
            android:textSize="@dimen/font_12"
            tools:text="@string/placeholder_top_stats" />

        <ImageButton
            android:id="@id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/flat_button_selector"
            android:padding="@dimen/padding_8"
            android:src="@drawable/ic_overflow_dots" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@id/expanded_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/extra_info"
        android:layout_alignTop="@android:id/icon"
        android:background="@color/grey_white_1000"
        android:visibility="gone">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/flat_button_selector"
            android:src="@drawable/ic_action_navigation_expand" />


        <TextView
            android:id="@id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLength="@integer/twit_length"
            android:paddingBottom="@dimen/padding_8"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:paddingTop="@dimen/padding_8"
            android:text="@string/delete"
            android:textColor="@color/black_54"
            android:textSize="@dimen/font_24"
            android:textStyle="bold" />

        <TextView
            android:id="@id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/delete"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLength="@integer/twit_length"
            android:paddingBottom="@dimen/padding_8"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:paddingTop="@dimen/padding_8"
            android:textColor="@color/black_54"
            android:textSize="@dimen/font_24"
            android:textStyle="bold"
            tools:text="@android:string/cancel" />

    </RelativeLayout>
</RelativeLayout>